# ha-litellm-conversation

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FEATURE_IDEAS.md  LICENSE  LITELLM_COMPAT.md  NEXT_STEPS.md  PLAN.md  README.md  hacs.json  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-13_dreaming-layer.md  2026-07-13_vision-and-extended-tools.md
blueprints/automation/: nightly_dreaming.yaml
custom_components/litellm_conversation/: __init__.py  activity.py  ai_task.py  config_flow.py  const.py  conversation.py  diagnostics.py  dreaming.py  entity.py  extended_tools.py  manifest.json  memory.py  quality_scale.yaml  schemas.py  select.py  sensor.py  services.py  services.yaml  strings.json  stt.py  switch.py  todo.py  transcripts.py  tts.py  util.py
custom_components/litellm_conversation/translations/: en.json
docs/: roadmap.md
scripts/: develop  live_check.py
tests/: __init__.py  conftest.py  test_ai_task_util_diagnostics.py  test_attachments.py  test_chat_loop.py  test_config_flow.py  test_const.py  test_dreaming.py  test_extended_tools.py  test_memory.py  test_new_features.py  test_request_params.py  test_select.py  test_sensor.py  test_services.py  test_streaming_live.py  test_stt_tts.py  test_todo.py  test_transcripts.py  test_transform_stream.py
