[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-litellm-conversation"
version = "1.0.1"
description = "Home Assistant custom integration: LiteLLM Conversation via OpenAI-compatible API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "openai>=1.58.1",
    "voluptuous-openapi>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.ruff]
# Inherit settings from ruff.toml at repo root

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/litellm_conversation"]
