[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-litellm-conversation"
version = "1.3.0"
description = "Home Assistant custom integration: LiteLLM Conversation via OpenAI-compatible API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "openai>=1.58.1",
    "voluptuous-openapi>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13.300",
    "hassil==3.5.0",
    "home-assistant-intents==2026.1.28",
    "PyTurboJPEG==1.8.0",
    "ha-ffmpeg>=3.2.0",
    "mutagen>=1.47.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

# NOTE: ruff is configured via ruff.toml at the repo root (used by CI and
# pre-commit). Do not add [tool.ruff] here — ruff prefers ruff.toml when both
# exist, so settings added here would be silently ignored.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components/litellm_conversation"]
